[gd_scene load_steps=8 format=3 uid="uid://daiyf82t58v7s"]

[ext_resource type="Script" uid="uid://bwhyes7j5e77m" path="res://player.gd" id="1_onrkg"]
[ext_resource type="PackedScene" uid="uid://dhfl87xl2laua" path="res://assets/models/player.gltf" id="2_hqtel"]
[ext_resource type="PackedScene" uid="uid://bl4ue4lvsx2v2" path="res://pewpew.tscn" id="2_i3pqv"]
[ext_resource type="PackedScene" uid="uid://xn3bby3fs245" path="res://assets/models/phantom.gltf" id="4_hqtel"]

[sub_resource type="BoxShape3D" id="BoxShape3D_i3pqv"]
size = Vector3(0, 0, 0)

[sub_resource type="BoxShape3D" id="BoxShape3D_hqtel"]
size = Vector3(0, 0, 0)

[sub_resource type="CylinderMesh" id="CylinderMesh_hqtel"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_onrkg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_i3pqv")

[node name="player_model" parent="CollisionShape3D" instance=ExtResource("2_hqtel")]

[node name="SpringArmPivot" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -7.98346, 18.2485, 4)

[node name="SpringArm3D" type="SpringArm3D" parent="SpringArmPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.12774, 0, 2.28317)
spring_length = 20.0

[node name="SpringPosition" type="Node3D" parent="SpringArmPivot/SpringArm3D"]

[node name="PlayerCamera" type="Camera3D" parent="SpringArmPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.12774, 0, 2.28317)
current = true

[node name="Line" type="Marker3D" parent="SpringArmPivot/PlayerCamera"]

[node name="Pewpew" parent="." instance=ExtResource("2_i3pqv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.54852, 12.901, 3.49396)
gravity_scale = 0.0

[node name="phantom" parent="Pewpew" instance=ExtResource("4_hqtel")]
transform = Transform3D(-1, 0, -8.74227e-08, 0, 1, 0, 8.74227e-08, 0, -1, 0, 0, 0)
visible = false
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pewpew"]
visible = false
shape = SubResource("BoxShape3D_hqtel")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pewpew"]
mesh = SubResource("CylinderMesh_hqtel")
